--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -39,7 +39,7 @@
                     Avis et dérogation
             </a>
 
-            <?php if((int)$this->nbAvisDerogation > 0 ): ?>
+            <?php if($this->hasAvisDerogation): ?>
                 <div class="greenCircle"></div>
             <?php endif ?>
         </li>
