Définition des TODOs

--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -20,6 +20,7 @@
       </select>
     </div>
   </div>
+  <!-- TODO Enlever le WYSIWYG et remplacer par un textarea => A faire aussi dans la partie Edit -->
   <div class="control-group">
     <label class="control-label" for="inputInformations">Informations</label>
     <div class="controls">
