--- a/application/views/scripts/dossier/results/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations-edit.phtml
@@ -1,3 +1,4 @@
+<?= var_dump($this->avisDerogations) ?>
 <h4 class="h4_subtitle">Avis / Dérogation <strong> ID BLOCK : <?= $this ->ID_AVIS_DEROGATIONS?></strong></h4>
 <form  class="container-fluid" method="post">
     <div class="btn-group pull-right">
