Définition des URLs avec le helper Zend

--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -1,6 +1,6 @@
-<a href="/formulaire/edit-rubrique/rubrique/<?php echo $this->champ['ID_RUBRIQUE'] ?>">
+<a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-rubrique', 'rubrique' => $this->champ['ID_RUBRIQUE']], null, true) ?>">
     <i class="icon-arrow-left"></i>
-    Retourner sur la rubrique "<?php echo $this->rubrique['NOM'] ?>"
+    Retourner sur la rubrique "<?= $this->rubrique['NOM'] ?>"
 </a>
 
 <div class="row-fluid">
@@ -16,7 +16,7 @@
 <div id="edit-champ" class="row-fluid">
     <div class="span5 infos-rubrique">
         <h3>
-            <?php echo $this->rubrique['NOM'] ?>
+            <?= $this->rubrique['NOM'] ?>
             <?php if($this->rubrique['DEFAULT_DISPLAY']): ?>
                 <small>(Affichée par défaut)</small>
             <?php endif ?>
@@ -26,15 +26,15 @@
     <div class="span4 offset2 infos-champ">
         <form action class="form-inline" method="post">
             <label for="nom_champ">Nom du champ</label>
-            <input type="text" name="nom_champ" id="nom_champ" value="<?php echo $this->champ['NOM']; ?>" required>
+            <input type="text" name="nom_champ" id="nom_champ" value="<?= $this->champ['NOM']; ?>" required>
             <label for="type_champ">Type du champ</label>
             <select name="type_champ" id="type_champ" disabled>
                 <?php foreach($this->listeTypeChampRubrique as $typeChamp): ?>
                     <option
-                        value="<?php echo $typeChamp['ID_TYPECHAMP'] ?>"
-                        <?php echo $typeChamp['ID_TYPECHAMP'] === $this->champ['ID_TYPECHAMP'] ? 'selected' : '' ?>
+                        value="<?= $typeChamp['ID_TYPECHAMP'] ?>"
+                        <?= $typeChamp['ID_TYPECHAMP'] === $this->champ['ID_TYPECHAMP'] ? 'selected' : '' ?>
                     >
-                        <?php echo $typeChamp['TYPE'] ?>
+                        <?= $typeChamp['TYPE'] ?>
                     </option>
                 <?php endforeach ?>
             </select>
@@ -45,8 +45,8 @@
                     <h3>Valeurs de la liste</h3>
                     <?php foreach($this->valeursChamp as $valeur): ?>
                         <div>
-                            <input type="text" name="valeur-champ-<?php echo $valeur['ID_VALEURLISTE'] ?>" value="<?php echo $valeur['VALEUR'] ?>">
-                            <a href='#' data-id="<?php echo $valeur['ID_VALEURLISTE'] ?>" class="delete-list-value">Supprimer</a>
+                            <input type="text" name="valeur-champ-<?= $valeur['ID_VALEURLISTE'] ?>" value="<?= $valeur['VALEUR'] ?>">
+                            <a href='#' data-id="<?= $valeur['ID_VALEURLISTE'] ?>" class="delete-list-value">Supprimer</a>
                         </div>
                     <?php endforeach ?>
 
@@ -63,7 +63,7 @@
             <?php endif ?>
 
             <div class="pull-right">
-                <a href="/formulaire/edit-rubrique/rubrique/<?php echo $this->champ['ID_RUBRIQUE'] ?>" type="button" class="btn">Annuler</a>
+                <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-rubrique', 'rubrique' => $this->champ['ID_RUBRIQUE']], null, true) ?>"" type="button" class="btn">Annuler</a>
                 <button type="submit" class="btn btn-success">Sauvegarder le champ</button>
             </div>
         </form>
