--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -49,7 +49,7 @@
                                         </td>
                                         <td id='actions'>
                                             <div class='text-center'>
-                                                <a href="/formulaire/edit-rubrique/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">
+                                                <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-rubrique', 'rubrique' => $rubrique['ID_RUBRIQUE']], null, true) ?>">
                                                     <i title='Modifier' class='icon-pencil'></i>
                                                 </a>
                                                 <a href="" data-id="<?php echo $rubrique['ID_RUBRIQUE'] ?>" class="delete-rubrique">
