--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -516,6 +516,15 @@ if ($this->isDescriptifPersonnalise === true) {
         );
 
         foreach ($rubrique['CHAMPS'] as $champ) {
+            // Définition du libellé pour les cases à cocher
+            if ('Case à cocher' === $champ['TYPE']) {
+                if (true === boolval($champ['VALEUR'])) {
+                    $champ['VALEUR'] = 'Oui';
+                } else {
+                    $champ['VALEUR'] = 'Non';
+                }
+            }
+
             addChamp(
                 $odf,
                 $serviceUtils->getFullFusionName(
