IS_FAVORABLE ==> AVIS + modification update via Zend

--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -29,7 +29,7 @@
   <div class="control-group">
     <p class="control-label">Avis</p>
     <div class="controls">
-      <select name="IS_FAVORABLE" class="span4">       
+      <select name="AVIS" class="span4">       
           <option value="1" > Favorable</option>
           <option value="0" > Défavorable</option>
       </select>
