--- a/application/views/scripts/dossier/results/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations-edit.phtml
@@ -27,9 +27,9 @@
     </div>
     <div class="row">
         <p class="span2">Avis</p>
-        <select name="IS_FAVORABLE" class="span4">       
-            <option value="1" <?php echo $this->IS_FAVORABLE === 1 ? 'selected':''  ?>  >Favorable</option>
-            <option  value="0" <?php echo  $this->IS_FAVORABLE === 0 ? 'selected':''?> >Défavorable</option>
+        <select name="AVIS" class="span4">       
+            <option value="1" <?php echo $this->AVIS === 1 ? 'selected':''  ?>  >Favorable</option>
+            <option  value="0" <?php echo  $this->AVIS === 0 ? 'selected':''?> >Défavorable</option>
         </select>
     </div>
     <div class="row">
