--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -5,7 +5,7 @@
         <div class="span6">
             <p>Type : <?= $this->TYPE_AVIS_DEROGATIONS === 1 ? "Avis":"Dérogations" ?></p>
             <p>Informations : <?= $this->INFORMATIONS?>
-            <p>Avis : <?= $this->IS_FAVORABLE === 1 ? 'Favorable':'Défavorable'?></p>
+            <p>Avis : <?= $this->AVIS === 1 ? 'Favorable':'Défavorable'?></p>
         </div>
         <div class="span6">
             <p>Avis/Dérogation levé(e):
