ajout libelle dans la carte

--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -10,7 +10,7 @@
         <div class="span6">
             <p>Avis/Dérogation levé(e):
                 <a href='/dossier/index/id/<?= $this->ID_DOSSIER_LIE ?>'>
-                     <?=$this->ID_DOSSIER_LIE ? $this->ID_DOSSIER_LIE: '' ?>
+                     <?=$this->ID_DOSSIER_LIE ? $this->ID_DOSSIER_LIE.'-'.$this->OBJET_DOSSIER: '' ?>
                 </a>
             </p>
             <div class="flex">
