--- a/public/css/etiquetteAvisDerogations/cardAvisDerogations.css
+++ b/public/css/etiquetteAvisDerogations/cardAvisDerogations.css
@@ -5,6 +5,7 @@
 }
 
 .cardAvisDerogations{
+    /*TODO: ajuster padding + titre pour ajuster les espaement de la carte */
     background:var(--backCardColor);
     box-shadow: 1px 0px 10px 2px rgb(37 40 37 / 75%);
     margin: var(--margPaddpx);
