--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -1,41 +1,42 @@
 <?php if($this->action != "add" && $this->do != "new" ) : ?>
 <?php $this->placeholder('lateral_navigation')->captureStart(); // Capture du 'lateral_navigation' ?>
 <link rel="stylesheet" href="/css/etiquetteAvisDerogations/greenCircle.css"/>
-<input type='hidden' name='ID_CREATEUR' id='ID_CREATEUR' value='<?php echo $this->idUser; ?>' />	
+<input type='hidden' name='ID_CREATEUR' id='ID_CREATEUR' value='<?php echo $this->idUser; ?>' />
 <ul class="nav nav-tabs nav-stacked menu_dashboard" >
     <li class="<?php echo ( $this->action == "index" ) ? "active" : "read" ?>">
-        <a 
+        <a
             href='<?php echo $this->url(array("controller" => "dossier", "id" => $this->idDossier), false, true) ?>'><em class="icon-info-sign icon-black"></em> Informations générales</a>
     </li>
-        
-	<?php		
-            if($this->idTypeDossier == 1 && $this->natureDossier != 3 && $this->natureDossier != 9) {
-                echo "<li class='".(( $this->action == "descriptif") ? "active" : "read" )."'>
-                        <a "
-                        . "href='".$this->url(array("controller" => "dossier", "action"=>"descriptif", "id" => $this->idDossier), false, true)."'><i class=\"icon-book icon-black\"></i> Descriptif ".(( $this->natureDossier == 1 || $this->natureDossier == 2 ) ? " des travaux" : "")."</a>
-                    </li>";
-            }
 
-            if ($this->idTypeDossier == 1 || $this->idTypeDossier == 2 || $this->idTypeDossier == 3 ) {
-                echo "<li class='".( ( $this->action == "textes-applicables" ) ? "active" : "read" )."'>
-                        <a "
-                        . "href='".$this->url(array("controller" => "dossier", "action"=>"textes-applicables", "id" => $this->idDossier), false, true)."'><i class=\"icon-align-center icon-black\"></i> Textes applicables</a>
-                    </li>";
-            }
+	<?php
+        if($this->idTypeDossier == 1 && $this->natureDossier != 3 && $this->natureDossier != 9) {
+            echo "<li class='".(( $this->action == "descriptif") ? "active" : "read" )."'>
+                    <a "
+                    . "href='".$this->url(array("controller" => "dossier", "action"=>"descriptif", "id" => $this->idDossier), false, true)."'><i class=\"icon-book icon-black\"></i> Descriptif ".(( $this->natureDossier == 1 || $this->natureDossier == 2 ) ? " des travaux" : "")."</a>
+                </li>";
+        }
 
-            if ($this->idTypeDossier != 5) {
-                echo "<li class='".( ( $this->action == "docconsulte" ) ? "active" : "read" )."'>
-                        <a  "
-                            . "href='".$this->url(array("controller" => "dossier", "action"=>"docconsulte", "id" => $this->idDossier), false, true)."'><i class=\"icon-file icon-black\"></i> Documents consultés</a>
-                    </li>";
-            }
+        if ($this->idTypeDossier == 1 || $this->idTypeDossier == 2 || $this->idTypeDossier == 3 ) {
+            echo "<li class='".( ( $this->action == "textes-applicables" ) ? "active" : "read" )."'>
+                    <a "
+                    . "href='".$this->url(array("controller" => "dossier", "action"=>"textes-applicables", "id" => $this->idDossier), false, true)."'><i class=\"icon-align-center icon-black\"></i> Textes applicables</a>
+                </li>";
+        }
+
+        if ($this->idTypeDossier != 5) {
+            echo "<li class='".( ( $this->action == "docconsulte" ) ? "active" : "read" )."'>
+                    <a  "
+                        . "href='".$this->url(array("controller" => "dossier", "action"=>"docconsulte", "id" => $this->idDossier), false, true)."'><i class=\"icon-file icon-black\"></i> Documents consultés</a>
+                </li>";
+        }
     ?>
 
+    <!-- TODO Mettre l'onglet en surbrillance -->
     <?php if($this->idTypeDossier === 1 ) :?>
         <li class="avisEtDerogation" style="position:relative">
             <a href=<?= "/dossier/avis-et-derogations/id/".$this->idDossier?>>
                 <i class="icon-file icon-black">
-                </i> 
+                </i>
                     Avis et dérogation
             </a>
 
@@ -47,77 +48,77 @@
 
 
     <?php
-            if($this->natureDossier != 3 && $this->natureDossier != 40 && $this->natureDossier != 41 && $this->natureDossier != 42 && $this->natureDossier != 44 && $this->natureDossier != 31 && $this->natureDossier != 32 && $this->idTypeDossier != 5) {
-                echo "
-                    <li class='".( ( $this->action == "prescription" ) ? "active" : "read" )."'>
-                            <a  "
-                            . "href='".$this->url(array("controller" => "dossier", "action"=>"prescription", "id" => $this->idDossier), false, true)."'><i class=\"icon-flag icon-black\"></i> Prescriptions</a>
-                    </li>";
-            }
-	?>
-		
-        <li class='<?php echo ( $this->action == "liees" ) ? "active" : "read" ?>'>
-            <a  
-                href='<?php echo $this->url(array("controller" => "dossier", "action"=>"liees", "id" => $this->idDossier), false, true) ?>'>
-                <em class="icon-folder-open icon-black"></em> 
-                Établissements et dossiers liés
-            </a>
-        </li>
-		
-	<?php
-            if($this->natureDossier != 40 && $this->natureDossier != 41 && $this->natureDossier != 42 && $this->natureDossier != 44) {
-                echo "<li class='".( ( $this->action == "contact" ) ? "active" : "read" )."'>
-                        <a  "
-                        . "href='".$this->url(array("controller" => "dossier", "action"=>"contact", "id" => $this->idDossier), false, true)."'><i class=\"icon-user icon-black\"></i> Contacts</a>
-                    </li>";
-            }
-	?>
-        
-        <li class='<?php echo ( $this->action == "piece-jointe" ) ? "active" : "read" ?>'>
-            <a 
-               href='<?php echo $this->url(array("controller" => "dossier", "action"=>"piece-jointe", "id" => $this->idDossier), false, true) ?>'><em class="icon-share icon-black"></em> Pièces jointes</a>
-        </li> 
-        <li class="nav-header">Actions</li>
-        <?php
-                $verrou = true;
-                if ($this->verrou == 1  || (isset($action) && $action == 'new')) {
-                        $label = "Déverrouiller";
-                        $idLink = "DEVERROU";
-                } else { 
-                        $label = "Verrouiller";
-                        $idLink = "VERROU";
-                        $verrou = false;
-                }
-        ?>
-        <li>
-            <a class="sep" id="<?php echo $idLink; ?>" style='cursor:pointer;'><em class="icon-lock icon-black"></em> <?php echo $label; ?></a>
-        </li>
-        <?php
+        if($this->natureDossier != 3 && $this->natureDossier != 40 && $this->natureDossier != 41 && $this->natureDossier != 42 && $this->natureDossier != 44 && $this->natureDossier != 31 && $this->natureDossier != 32 && $this->idTypeDossier != 5) {
             echo "
-                <li class='".( ( $this->action == "rapport" ) ? "active" : "read" )."'>
+                <li class='".( ( $this->action == "prescription" ) ? "active" : "read" )."'>
+                        <a  "
+                        . "href='".$this->url(array("controller" => "dossier", "action"=>"prescription", "id" => $this->idDossier), false, true)."'><i class=\"icon-flag icon-black\"></i> Prescriptions</a>
+                </li>";
+        }
+	?>
+
+    <li class='<?php echo ( $this->action == "liees" ) ? "active" : "read" ?>'>
+        <a
+            href='<?php echo $this->url(array("controller" => "dossier", "action"=>"liees", "id" => $this->idDossier), false, true) ?>'>
+            <em class="icon-folder-open icon-black"></em>
+            Établissements et dossiers liés
+        </a>
+    </li>
+
+	<?php
+        if($this->natureDossier != 40 && $this->natureDossier != 41 && $this->natureDossier != 42 && $this->natureDossier != 44) {
+            echo "<li class='".( ( $this->action == "contact" ) ? "active" : "read" )."'>
                     <a  "
-                    . "href='".$this->url(array("controller" => "dossier", "action"=>"rapport", "id" => $this->idDossier), false, true)."'>
-                    <i class=\"icon-refresh icon-black\"></i> Rapport</a>
-                </li>
-            ";
-        ?>
-        <?php if (!$verrou && ($this->idDateCommissionAffect != null)) : ?>
-            <li>
-                <a class="sep" href='/calendrier-des-commissions/gestionodj/dateCommId/<?php echo $this->idDateCommissionAffect; ?>'><em class='icon-calendar icon-black'></em> Afficher ordre du jour</a>
+                    . "href='".$this->url(array("controller" => "dossier", "action"=>"contact", "id" => $this->idDossier), false, true)."'><i class=\"icon-user icon-black\"></i> Contacts</a>
+                </li>";
+        }
+	?>
+
+    <li class='<?php echo ( $this->action == "piece-jointe" ) ? "active" : "read" ?>'>
+        <a
+            href='<?php echo $this->url(array("controller" => "dossier", "action"=>"piece-jointe", "id" => $this->idDossier), false, true) ?>'><em class="icon-share icon-black"></em> Pièces jointes</a>
+    </li>
+    <li class="nav-header">Actions</li>
+    <?php
+            $verrou = true;
+            if ($this->verrou == 1  || (isset($action) && $action == 'new')) {
+                    $label = "Déverrouiller";
+                    $idLink = "DEVERROU";
+            } else {
+                    $label = "Verrouiller";
+                    $idLink = "VERROU";
+                    $verrou = false;
+            }
+    ?>
+    <li>
+        <a class="sep" id="<?php echo $idLink; ?>" style='cursor:pointer;'><em class="icon-lock icon-black"></em> <?php echo $label; ?></a>
+    </li>
+    <?php
+        echo "
+            <li class='".( ( $this->action == "rapport" ) ? "active" : "read" )."'>
+                <a  "
+                . "href='".$this->url(array("controller" => "dossier", "action"=>"rapport", "id" => $this->idDossier), false, true)."'>
+                <i class=\"icon-refresh icon-black\"></i> Rapport</a>
             </li>
-        <?php endif; ?>
-        <?php if(!$verrou && $this->is_allowed_delete_dossier) : ?>
-            <li>
-                <a id="suppressionDossier" href="#"><em class="icon-remove icon-black"></em>Supprimer le dossier</a>
-            </li>
-        <?php endif; ?>
-    </ul>
+        ";
+    ?>
+    <?php if (!$verrou && ($this->idDateCommissionAffect != null)) : ?>
+        <li>
+            <a class="sep" href='/calendrier-des-commissions/gestionodj/dateCommId/<?php echo $this->idDateCommissionAffect; ?>'><em class='icon-calendar icon-black'></em> Afficher ordre du jour</a>
+        </li>
+    <?php endif; ?>
+    <?php if(!$verrou && $this->is_allowed_delete_dossier) : ?>
+        <li>
+            <a id="suppressionDossier" href="#"><em class="icon-remove icon-black"></em>Supprimer le dossier</a>
+        </li>
+    <?php endif; ?>
+</ul>
 <?php $this->placeholder('lateral_navigation')->captureEnd();
 endif; ?>
 
 <?php $this->placeholder('page_header')->captureStart();  // Capture du 'before_content' ?>
 
-<?php 
+<?php
     if($this->action == "add" || $this->do == "new" ){
         //Cas d'ajout d'un nouveau dossier
         echo "
@@ -167,7 +168,7 @@ endif; ?>
                 }
                 echo ")</span>";
             }
-                
+
             echo " <span style='font-size:10px'>#".$etablissementInfos['general']['NUMEROID_ETABLISSEMENT']."</span>";
         }
         echo "
@@ -194,13 +195,13 @@ endif; ?>
         if($nbEtab > 0){
             if($nbEtab == 1 && $this->enteteEtab[0]["LIBELLE_GENRE"] == "Site"){
                 echo "Site concerné : &nbsp;";
-                
+
                 echo "
                     <a href='/etablissement/index/id/".$this->enteteEtab[0]['ID_ETABLISSEMENT']."' class='etab'>
-                        ".$this->enteteEtab[0]['LIBELLE_ETABLISSEMENTINFORMATIONS']." 
+                        ".$this->enteteEtab[0]['LIBELLE_ETABLISSEMENTINFORMATIONS']."
                     </a>
                 ";
-                        
+
                 echo " <span style='font-size:10px'>#".$this->enteteEtab[0]['infosEtab']['general']['NUMEROID_ETABLISSEMENT']."</span>";
             }else{
                 echo "Etablissement(s) concerné(s) : &nbsp;";
@@ -260,9 +261,9 @@ endif; ?>
                             }
                             echo ")</span>";
                         }
-                        
+
                         echo " <span style='font-size:10px'>#".$value['infosEtab']['general']['NUMEROID_ETABLISSEMENT']."</span>";
-                                        
+
                         $i++;
                     }
                 }
@@ -326,7 +327,7 @@ endif; ?>
 			});
 			return false;
 		});
-	
+
 		$("#DEVERROU").live('click',function(){
 			$.ajax({
 					url: "/dossier/deverrou",
