--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -1,57 +1,61 @@
-<link rel="stylesheet" href="/css/etiquetteAvisDerogations/cardAvisDerogations.css"/>
 <form class="form-horizontal span8" method="post">
-<input class="btn btn-success pull-right" type='submit' value='ajouter avis/dérogations'/>
-  <div class="control-group">
-    <label class="control-label" for="inputTitre">Titre</label>
-    <div class="controls">
-      <input name="TITRE" type="text" id="inputTitre" placeholder="Titre" required="required">
-    </div>
-  </div>
-  <div class="control-group">
-    <label class="control-label" for="inputType">Type</label>
-    <div class="controls">
-      <select name="TYPE_AVIS_DEROGATIONS" required="required">
-        <option value=<?= 1 ?>>
-            Avis
-        </option>
-        <option value=<?= 2 ?>>
-            Dérogations
-        </option>
-      </select>
-    </div>
-  </div>
-  <div class="control-group">
-    <label class="control-label" for="inputInformations">Informations</label>
-    <div class="controls">
-      <textarea name="INFORMATIONS"></textarea>
-    </div>
-  </div>
-  <div class="control-group">
-    <p class="control-label">Avis</p>
-    <div class="controls">
-      <select name="AVIS" class="span4">       
-          <option value="1" > Favorable</option>
-          <option value="0" > Défavorable</option>
-      </select>
-    </div>
-  </div>
+    <input class="btn btn-success pull-right" type='submit' value='Ajouter l&apos;avis'/>
 
-  <div class="control-group">
-    <p class="control-label">Avis/Dérogation levé(e):</p>
-    <?= $this->partial('dossier/results/avisderogation/dossier.phtml',['DOSSIERS_ETAB' => $this->listDossierEtab, 'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE]); ?>
-  </div>
+    <div class="control-group">
+        <label class="control-label" for="inputType">Type</label>
+        <div class="controls">
+            <select name="TYPE_AVIS_DEROGATIONS" required="required">
+                <option value='<?= 1 ?>'>
+                    Avis
+                </option>
+                <option value='<?= 2 ?>'>
+                    Dérogation
+                </option>
+            </select>
+        </div>
+    </div>
 
-  <div class="control-group">
-    <label class="control-label"for="DISPLAY_HISTORIQUE">Afficher l'historique de l'établissement</label>
-    <div class="controls">
-      <input type='hidden' name='DISPLAY_HISTORIQUE' value='0'>
-      <input   type="checkbox" 
-                id="DISPLAY_HISTORIQUE" 
+    <div class="control-group">
+        <label class="control-label" for="inputTitre">Titre</label>
+        <div class="controls">
+            <input name="TITRE" type="text" id="inputTitre" required>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="inputInformations">Informations</label>
+        <div class="controls">
+            <textarea name="INFORMATIONS"></textarea>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <p class="control-label">Avis</p>
+        <div class="controls">
+            <select name="AVIS" class="span4">
+                <option value="1"> Favorable</option>
+                <option value="2"> Défavorable</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <p class="control-label">Avis/Dérogation levé(e):</p>
+        <?= $this->partial('dossier/results/avisderogation/dossier.phtml', ['DOSSIERS_ETAB' => $this->listDossierEtab, 'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE]); ?>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label"for="DISPLAY_HISTORIQUE">Afficher l'historique de l'établissement</label>
+        <div class="controls">
+            <input type='hidden' name='DISPLAY_HISTORIQUE' value='0'>
+            <input
+                type="checkbox"
+                id="DISPLAY_HISTORIQUE"
                 name="DISPLAY_HISTORIQUE"
                 value='1'
-      >
-    </div>        
-  </div>
+            >
+        </div>
+    </div>
 </form>
 
 <?= $this->partialLoop("dossier/results/avis-et-derogations.phtml", $this->arrayAvisDerogations); ?>
