--- a/application/views/scripts/dossier/results/avisderogation/dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/dossier.phtml
@@ -1,16 +1,16 @@
 <?php foreach ($this->DOSSIERS_ETAB as $dossier) : ?>
-<div>
-    <label class="radio controls" for="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>">
-        <a href='/dossier/index/id/<?= $dossier['ID_DOSSIER'] ?>'>
-            <?= $dossier['ID_DOSSIER'].'-'.$dossier['OBJET_DOSSIER'] ?>
-        </a>
-        <input  type="radio" 
-                name="ID_DOSSIER_LIE" 
-                id="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>" 
+    <div class="controls">
+        <label class="radio" for="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>">
+            <input
+                type="radio"
+                name="ID_DOSSIER_LIE"
+                id="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>"
                 value=<?= $dossier['ID_DOSSIER'] ?>
                 <?= $dossier['ID_DOSSIER'] === $this->ID_DOSSIER_LIE ? 'checked' : '' ?>
-        >
-    </label>
-</div>
-
+            >
+            <a href="<?= $this->url(['controller' => 'dossier', 'action' => 'index', 'id' => $dossier['ID_DOSSIER']]) ?>">
+                <?= $dossier['ID_DOSSIER'].'-'.$dossier['OBJET_DOSSIER'] ?>
+            </a>
+        </label>
+    </div>
 <?php endforeach ?>
